Your commit message

--- a/views/admin/adminSignin.ejs
+++ b/views/admin/adminSignin.ejs
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="/css/signUp.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-  <script src="https://cdn.tailwindcss.com"></script>
+  <!-- <script src="https://cdn.tailwindcss.com"></script> -->
 </head>
 <body class="flex flex-col min-h-screen">
 
@@ -179,7 +179,5 @@
   })
 </script>
 
-
-<%- include('../partials/admin/footer') %>
 </body>
 </html>
